Simplify  <input></input> to <input/>

--- a/src/main/webapp/app/module/employee/view/employee.html
+++ b/src/main/webapp/app/module/employee/view/employee.html
@@ -4,17 +4,17 @@
 	<h2 class="sub-header">Personal data</h2>
 	<label-group label="ID">
 		<p>
-			<input type="text" class="form-control" ng-model="employee.id" disabled></input>
+			<input type="text" class="form-control" ng-model="employee.id" disabled />
 		</p>
 	</label-group>
 	<label-group label="Name">
 		<p>
-			<input type="text" class="form-control" ng-model="employee.name"></input>
+			<input type="text" class="form-control" ng-model="employee.name" />
 		</p>
 	</label-group>
 	<label-group label="E-Mail">
 		<p>
-			<input type="text" class="form-control" ng-model="employee.email"></input>
+			<input type="text" class="form-control" ng-model="employee.email" />
 		</p>
 	</label-group>
 	<label-group label="Abilities">
