--- a/src/main/webapp/app/module/episode/view/episode.html
+++ b/src/main/webapp/app/module/episode/view/episode.html
@@ -3,12 +3,12 @@
 <form class="form-horizontal">
 	<label-group label="ID">
 		<p>
-			<input type="text" class="form-control" ng-model="episode.id" disabled></input>
+			<input type="text" class="form-control" ng-model="episode.id" disabled />
 		</p>
 	</label-group>
 	<label-group label="Name">
 		<p>
-			<input type="text" class="form-control" ng-model="episode.name"></input>
+			<input type="text" class="form-control" ng-model="episode.name" />
 		</p>
 	</label-group>
 	<label-group label="Start date">
