--- a/src/main/webapp/app/module/ical_import/view/ical_import.html
+++ b/src/main/webapp/app/module/ical_import/view/ical_import.html
@@ -3,17 +3,17 @@
 <form class="form-horizontal">
 	<label-group label="ID">
 		<p>
-			<input type="text" class="form-control" ng-model="icalImport.id" disabled></input>
+			<input type="text" class="form-control" ng-model="icalImport.id" disabled />
 		</p>
 	</label-group>
 	<label-group label="Name">
 		<p>
-			<input type="text" class="form-control" ng-model="icalImport.name"></input>
+			<input type="text" class="form-control" ng-model="icalImport.name" />
 		</p>
 	</label-group>
 	<label-group label="URL">
 		<p>
-			<input type="text" class="form-control" ng-model="icalImport.url"></input>
+			<input type="text" class="form-control" ng-model="icalImport.url" />
 		</p>
 	</label-group>
 	<button type="submit" ng-click="save()" class="btn btn-default"><i class="fa fa-floppy-o"></i> Save</button>
