Open the correct datepicker

--- a/src/main/webapp/app/module/episode/view/episode.html
+++ b/src/main/webapp/app/module/episode/view/episode.html
@@ -15,7 +15,7 @@
 		<p class="input-group">
 			<input type="text" class="form-control" ng-model="episode.start" uib-datepicker-popup="yyyy-MM-dd" is-open="datepicker.startOpened" />
 			<span class="input-group-btn">
-				<button type="button" class="btn btn-default" ng-click="datepicker.endOpened = true;"><i class="fa fa-calendar"></i></button>
+				<button type="button" class="btn btn-default" ng-click="datepicker.startOpened = true;"><i class="fa fa-calendar"></i></button>
 			</span>
 		</p>
 	</label-group>
