--- a/src/main/webapp/app/module/capacity/view/capacity.html
+++ b/src/main/webapp/app/module/capacity/view/capacity.html
@@ -6,7 +6,7 @@
       <label class="col-sm-2 control-label" for="control_id_useVelocity">Take velocity into account</label>
       <div class="col-sm-10 label-group-content">
       <div class="checkbox">
-        <input id="control_id_useVelocity" type="checkbox" ng-model="useVelocity" ng-change="loadChart();" />
+        <input id="control_id_useVelocity" type="checkbox" ng-model="vm.useVelocity" ng-change="vm.loadChart();" />
         <label></label>
       </div>
       </div>
@@ -15,9 +15,9 @@
       <label class="col-sm-2 control-label" for="control_id_useVelocity">Units</label>
       <div class="col-sm-10 label-group-content">
         <div class="btn-group" role="group">
-          <button type="button" class="btn btn-default active" ng-class="{active:units == 'hours'}" ng-click="switchUnits('hours')">Hours</button>
-          <button type="button" class="btn btn-default" ng-class="{active:units == 'days'}" ng-click="switchUnits('days')">Days</button>
-          <button type="button" class="btn btn-default" ng-class="{active:units == 'weeks'}" ng-click="switchUnits('weeks')">Weeks</button>
+          <button type="button" class="btn btn-default active" ng-class="{active: vm.units == 'hours'}" ng-click="vm.switchUnits('hours')">Hours</button>
+          <button type="button" class="btn btn-default" ng-class="{active: vm.units == 'days'}" ng-click="vm.switchUnits('days')">Days</button>
+          <button type="button" class="btn btn-default" ng-class="{active: vm.units == 'weeks'}" ng-click="vm.switchUnits('weeks')">Weeks</button>
         </div>
       </div>
     </div>
@@ -27,69 +27,69 @@
         <div class="btn-group">
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{_selectedEpisode.name ? _selectedEpisode.name + '(' + _selectedEpisode.start + ' - ' + _selectedEpisode.end + ')' : 'None'}} <span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a href ng-click="selectedEpisode('')">None</a></li>
+            <li><a href ng-click="vm.selectedEpisode('')">None</a></li>
             <li role="separator" class="divider"></li>
-            <li ng-repeat="episode in episodes | orderBy: 'start':true" ng-class="{past : isPast(episode.end)}"><a href ng-click="selectedEpisode(episode.id)">{{episode.name}} ({{episode.start}} - {{episode.end}})</a></li>
+            <li ng-repeat="episode in vm.episodes | orderBy: 'start':true" ng-class="{past : vm.isPast(episode.end)}"><a href ng-click="vm.selectedEpisode(episode.id)">{{episode.name}} ({{episode.start}} - {{episode.end}})</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <label-group label="Start date" ng-show="_selectedEpisode.id === ''">
+    <label-group label="Start date" ng-show="vm._selectedEpisode.id === ''">
       <p class="input-group">
-        <input type="text" class="form-control" ng-model="duration.start" uib-datepicker-popup="yyyy-MM-dd" is-open="datepicker.startOpened" ng-change="loadChart()"/>
+        <input type="text" class="form-control" ng-model="vm.duration.start" uib-datepicker-popup="yyyy-MM-dd" is-open="datepicker.startOpened" ng-change="vm.loadChart()"/>
         <span class="input-group-btn">
-          <button type="button" class="btn btn-default" ng-click="datepicker.startOpened = true;"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="btn btn-default" ng-click="vm.datepicker.startOpened = true;"><i class="fa fa-calendar"></i></button>
         </span>
       </p>
     </label-group>
-    <label-group label="End date" ng-show="_selectedEpisode.id === ''">
+    <label-group label="End date" ng-show="vm._selectedEpisode.id === ''">
       <p class="input-group">
-        <input type="text" class="form-control" ng-model="duration.end" uib-datepicker-popup="yyyy-MM-dd" is-open="datepicker.endOpened" ng-change="loadChart()"/>
+        <input type="text" class="form-control" ng-model="vm.duration.end" uib-datepicker-popup="yyyy-MM-dd" is-open="datepicker.endOpened" ng-change="vm.loadChart()"/>
         <span class="input-group-btn">
-          <button type="button" class="btn btn-default" ng-click="datepicker.endOpened = true;"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="btn btn-default" ng-click="vm.datepicker.endOpened = true;"><i class="fa fa-calendar"></i></button>
         </span>
       </p>
     </label-group>
     <label-group label="Abilities">
-      <div ng-repeat="(id, list) in andFilters" style="width: 230px; float: left; margin-right: 8px;">
+      <div ng-repeat="(id, list) in vm.andFilters" style="width: 230px; float: left; margin-right: 8px;">
         <div class="panel panel-default" style="width: 200px; float: left; margin-right: 8px;">
-          <tags-input ng-model="list" display-property="name" placeholder="..." replace-spaces-with-dashes="false" class="bootstrap" on-tag-added="loadChart();" on-tag-removed="loadChart();">
-            <auto-complete source="loadAbilities($query)" min-length="2" max-results-to-show="32"></auto-complete>
+          <tags-input ng-model="list" display-property="name" placeholder="..." replace-spaces-with-dashes="false" class="bootstrap" on-tag-added="vm.loadChart();" on-tag-removed="vm.loadChart();">
+            <auto-complete source="vm.loadAbilities($query)" min-length="2" max-results-to-show="32"></auto-complete>
           </tags-input>
           <div class="panel-footer">
-            AND <button ng-click="removeAndFilter(id)" class="btn btn-default"><i class="fa fa-minus-circle"></i></button>
+            AND <button ng-click="vm.removeAndFilter(id)" class="btn btn-default"><i class="fa fa-minus-circle"></i></button>
           </div>
         </div>
-        <div ng-hide="id == lastIndex">
+        <div ng-hide="id == vm.lastIndex">
           OR
         </div>
       </div>
       <div style="clear: both;"></div>
-      <button ng-click="addAndFilter()" class="btn btn-default"><i class="fa fa-plus-circle"></i> Add AND block</button>
+      <button ng-click="vm.addAndFilter()" class="btn btn-default"><i class="fa fa-plus-circle"></i> Add AND block</button>
     </label-group>
   </div>
 </form>
 
   <ul class="nav nav-pills">
-    <li ng-class="{active:selected == 'chart'}"><a href ng-click="select('chart')">Chart</a></li>
-    <li ng-class="{active:selected == 'list'}"><a href ng-click="select('list')">List</a></li>
+    <li ng-class="{active: vm.selected == 'chart'}"><a href ng-click="vm.select('chart')">Chart</a></li>
+    <li ng-class="{active: vm.selected == 'list'}"><a href ng-click="vm.select('list')">List</a></li>
   </ul>
 
-<div class="panel panel-default" ng-show="selected == 'chart'" style="padding: 30px;">
-  <highchart config="chartConfig"></highchart>
+<div class="panel panel-default" ng-show="vm.selected == 'chart'" style="padding: 30px;">
+  <highchart config="vm.chartConfig"></highchart>
 </div>
 
-<div class="panel panel-default" ng-show="selected == 'list'">
+<div class="panel panel-default" ng-show="vm.selected == 'list'">
   <table class="table table-striped">
     <thead>
       <tr>
         <th>Employee</th>
-        <th ng-repeat="category in chartConfig.xAxis.categories"><span style="color:{{category.color}};">{{category.y}}</span></th>
+        <th ng-repeat="category in vm.chartConfig.xAxis.categories"><span style="color:{{category.color}};">{{category.y}}</span></th>
         <th>Sum</th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="row in chartConfig.series">
+      <tr ng-repeat="row in vm.chartConfig.series">
         <th ng-bind="row.name"></th>
         <td ng-repeat="field in row.data track by $index">{{field | number: 1}}{{units | limitTo: 1}}</th>
         <th>{{sum(row.data) | number: 1}}{{units | limitTo: 1}}</th>
@@ -98,7 +98,7 @@
     <tfoot>
       <tr>
         <th>Sum</th>
-        <td ng-repeat="category in chartConfig.xAxis.categories">{{rowsum($index) | number: 1}}{{units | limitTo: 1}}</th>
+        <td ng-repeat="category in vm.chartConfig.xAxis.categories">{{rowsum($index) | number: 1}}{{units | limitTo: 1}}</th>
         <th>{{sumsum() | number: 1}}{{units | limitTo: 1}}</th>
       </tr>
     </tfoot>
