--- a/src/main/webapp/app/views/progressDialog.html
+++ b/src/main/webapp/app/views/progressDialog.html
@@ -1,18 +1,18 @@
 <div class="modal-header">
-  <h3 class="modal-title" ng-bind="title"></h3>
+  <h3 class="modal-title" ng-bind="vm.title"></h3>
 </div>
 <div class="modal-body">
-  <p ng-bind="progress.message"></p>
+  <p ng-bind="vm.progress.message"></p>
 
   <uib-progressbar
-    ng-class="{ 'active': progress.max != undefined, 'progress-striped' : progress.max != undefined}"
-    value="progress.value" max="progress.max">
-    <span ng-bind="progress.text"></span>
+    ng-class="{ 'active': vm.progress.max != undefined, 'progress-striped' : vm.progress.max != undefined}"
+    value="vm.progress.value" max="vm.progress.max">
+    <span ng-bind="vm.progress.text"></span>
   </uib-progressbar>
 </div>
 <div class="modal-footer">
   <div class="control-content">
-    <button ng-repeat="button in confirmButtons" class="btn btn-primary" ng-click="ok(button.value)" ng-bind="button.label"></button>
-    <a href="" ng-repeat="button in cancelButtons" ng-click="cancel(button.value)" ng-bind="button.label"></a>
+    <button ng-repeat="button in vm.confirmButtons" class="btn btn-primary" ng-click="vm.ok(button.value)" ng-bind="button.label"></button>
+    <a href="" ng-repeat="button in vm.cancelButtons" ng-click="vm.cancel(button.value)" ng-bind="button.label"></a>
   </div>
 </div>
