--- a/src/main/webapp/app/styles/global.css
+++ b/src/main/webapp/app/styles/global.css
@@ -40,3 +40,8 @@ h1.page-header i.fa {
 	width: 1em;
 	margin: 0 auto;
 }
+
+.imported {
+	background-size: 30px 30px;
+	background-image: linear-gradient(45deg, rgba(255, 255, 255, .3) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .3) 50%, rgba(255, 255, 255, .3) 75%, transparent 75%, transparent);
+}
