Implement manually adding events

--- a/src/main/webapp/app/module/calendar/view/calendar.html
+++ b/src/main/webapp/app/module/calendar/view/calendar.html
@@ -4,4 +4,4 @@
 	<label class="btn btn-primary active {{calendar.id}}" ng-model="vm.calendar.selected" ng-repeat="calendar in vm.calendars" ng-click="vm.publishAllEvents()" uib-btn-checkbox>{{calendar.name}}</label>
 </div>
 
-<div ui-calendar="vm.calendarConfig" ng-model="vm.eventSources" calendar="myCalendar"></div>
+<div ui-calendar="vm.calendarConfig" ng-model="vm.eventSources"></div>
