--- a/src/main/webapp/app/module/calendar/view/event.html
+++ b/src/main/webapp/app/module/calendar/view/event.html
@@ -6,7 +6,7 @@
 		<label-group label="Type">
 		<div class="btn-group">
 			<button type="button" class="btn btn-default dropdown-toggle"
-				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-disabled="vm.title === 'Edit event'">
 				{{vm.selected.calendar.name}} <span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu">
